examples/negative/08_bad_result_helper_type.aeth
// Expected diagnostic: RESULT_HELPER_TYPE_MISMATCH.
function main() returns Unit
  effects log
do
  let value: Int = unwrapOrResult(Ok(1), "bad")
  print(intToString(value))
end
